kqed_dev4/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Sweepstak__c</fullName>
        <description>This is from the classifications object</description>
        <label>TAG: Sweepstakes</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TA_Account_ID__c</fullName>
        <formula>TEXT(TaAccountId__c)</formula>
        <label>TA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaAccountId__c</fullName>
        <description>TA Account Id</description>
        <externalId>true</externalId>
        <label>TA Account Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Termination_Code__c</fullName>
        <label>Termination Code</label>
        <picklist>
            <picklistValues>
                <fullName>All names deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phony account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>This_Drive_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drive Premiums</description>
        <inlineHelpText>This field correctly represents the ‘Target’ checkbox that Laura uses.</inlineHelpText>
        <label>This Drive Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UndeliverableCount__c</fullName>
        <description>TA Undeliverable mail count</description>
        <label>Undeliverable Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <label>UniqueID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WCAI_Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WCAI Major Donor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGBH_Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WGBH Major Donor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGBY_Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WGBY Major Donor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warning_Note__c</fullName>
        <description>Warning area to add details everyone should be aware of.</description>
        <inlineHelpText>Warning, description regarding information on the organization or foundation, if you wish to remove an old warning, copy and paste it into a note on on the organization.</inlineHelpText>
        <label>Warning Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <label>Warning</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Years_on_file__c</fullName>
        <formula>YEAR(TODAY()) - YEAR( Acquired_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years on file</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alt_account_id__c</fullName>
        <label>Alt Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ta_homephone_id__c</fullName>
        <label>Ta HomePhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workphone_id__c</fullName>
        <label>Ta WorkPhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Foundation_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Foundation</value>
        </filters>
        <label>All Foundation Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Preferred_Address__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Household_ID__c</columns>
        <columns>Household_Email__c</columns>
        <columns>Household_Phone__c</columns>
        <columns>Warning__c</columns>
        <columns>Warning_Note__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <label>All Household Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Organization_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>All Organization Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Household_Email__c</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>STS__c</columns>
        <columns>WorkPhone__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <namedFilters>
        <fullName>Opportunity_00NQ0000000YkPVMA0</fullName>
        <active>true</active>
        <field>Opportunity.Matching_Company__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Foundation, Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Matching Company</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IT0000000DdTdMAK_00NT0000001NcG6MAK</fullName>
        <active>true</active>
        <errorMessage>Please choose an Organization such as a business or foundation.</errorMessage>
        <field>Purchase_Order__c.Vendor__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Household</value>
        </filterItems>
        <infoMessage>Please search and choose an Organization such as a business or foundation.</infoMessage>
        <isOptional>false</isOptional>
        <name>Purchase Order_Vendor/Provider</name>
    </namedFilters>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_h</fullName>
        <active>true</active>
        <label>test -h</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_o</fullName>
        <active>true</active>
        <label>test- o</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_o_2</fullName>
        <active>true</active>
        <label>test o 2</label>
    </recordTypes>
</CustomObject>